--- a/Frontend/career.html
+++ b/Frontend/career.html
@@ -9,11 +9,17 @@
     </div>
 </div>
 
-<div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
+<div class="container text-center ">
+
+    
+    <h2><a href="" class="link-animated text-decoration-underline text-success "  >See Openings</a></h2>
+
+</div>
+
+<!-- <div class="container-fluid py-5 wow fadeInUp" data-wow-delay="0.1s">
     <div class="container py-5">
         <div class="section-title text-center position-relative pb-3 mb-5 mx-auto" style="max-width: 600px;">
             <h5 class="fw-bold text-primary text-uppercase">Careers</h5>
-            <h1 class="mb-0" style="color: red;">No jobs are available</h1>
         </div>
     </div>
-</div>
+</div> -->
