--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -38,7 +38,7 @@
                     </div>
                     <div class="ps-4">
                         <h5 class="mb-2">Email to get free quote</h5>
-                        <h4 class="text-primary mb-0">info@codesquad.com</h4>
+                        <h4 class="text-primary mb-0">info@techxquad.com</h4>
                     </div>
                 </div>
             </div>
@@ -83,10 +83,7 @@
                 </form>
             </div>
             <div class="col-lg-6 wow slideInUp" data-wow-delay="0.6s">
-                <iframe class="position-relative rounded w-100 h-100"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3001156.4288297426!2d-78.01371936852176!3d42.72876761954724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ccc4bf0f123a5a9%3A0xddcfc6c1de189567!2sNew%20York%2C%20USA!5e0!3m2!1sen!2sbd!4v1603794290143!5m2!1sen!2sbd"
-                    frameborder="0" style="min-height: 350px; border:0;" allowfullscreen="" aria-hidden="false"
-                    tabindex="0"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3662.084281142787!2d85.35195837486138!3d23.385168102700668!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f4e16b76d7e737%3A0xed11e4dbbaa0b66c!2sshanti%20vihar%2C%20oppossite%20teril%20talab!5e0!3m2!1sen!2sin!4v1690714211136!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
     </div>
