--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -31,20 +31,12 @@
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
 
-    <!-- Angular CDN -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.3/angular.min.js" integrity="sha512-KZmyTq3PLx9EZl0RHShHQuXtrvdJ+m35tuOiwlcZfs/rE7NZv29ygNA8SFCkMXTnYZQK2OX0Gm2qKGfvWEtRXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular-route.js"></script> -->
-    <script src="lib/typedjs/typedjs.js"></script>
-    <script src="lib/app/app.js"></script>
-    <script src="lib/app/router.js"></script>
-    <script src="app/module.js"></script>
-    <script src="app/service.js"></script>
-    <script src="app/controller.js"></script>
+   
 
     <link rel="stylesheet" href="css/app-style.css">
 </head>
 
-<body ng-app="codesquad" ng-controller="AppController">
+<body ng-app="techxquad" >
 
 
 
@@ -110,14 +102,14 @@
                                 id="graphics-designing">Graphics Designing</a>
                         </div>
                     </div>
-                    <a href="#!blog" class="nav-item nav-link" id="blog">Blogs</a>
+                    <!-- <a href="#!blog" class="nav-item nav-link" id="blog" > Blogs</a> -->
 
                     <a href="#!contact" class="nav-item nav-link" id="contact">Contact Us</a>
                     <a href="#!career" class="nav-item nav-link" id="career">Career</a>
                 </div>
-                <butaton type="button" class="btn text-primary ms-3" data-bs-toggle="modal"
+                <!-- <butaton type="button" class="btn text-primary ms-3" data-bs-toggle="modal"
                     data-bs-target="#searchModal"><i class="fa fa-search"></i>
-                </butaton>
+                </butaton> -->
             </div>
 
         </nav>
@@ -127,7 +119,7 @@
 
 
     <!-- Full Screen Search Start -->
-    <div class="modal fade" id="searchModal" tabindex="-1">
+    <!-- <div class="modal fade" id="searchModal" tabindex="-1">
         <div class="modal-dialog modal-fullscreen">
             <div class="modal-content" style="background: rgba(9, 30, 62, .7);">
                 <div class="modal-header border-0">
@@ -143,7 +135,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Full Screen Search End -->
 
 
@@ -169,7 +161,7 @@
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-envelope-open text-primary me-2"></i>
-                                <p class="mb-0">info@codesquad.com</p>
+                                <p class="mb-0">info@techxquad.com</p>
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-telephone text-primary me-2"></i>
@@ -247,9 +239,19 @@
 
 
 
+    
+    <!-- Angular CDN -->
+   
+    <script src="lib/app/app.js"></script>
+    <script src="lib/app/router.js"></script>
+  
+    <script src="lib/typedjs/typedjs.js"></script>
+    <script src="app/module.js"></script>
+    <script src="app/service.js"></script>
+    <script src="app/controller.js"></script> 
+    
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
-
 
 
 </body>
