--- a/Frontend/contact.html
+++ b/Frontend/contact.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="ps-4">
                         <h5 class="mb-2">Call to ask any question</h5>
-                        <h4 class="text-primary mb-0">+91 6299949208</h4>
+                        <h4 class="text-primary mb-0"><a href="tel:+91 6299949208">+91 6299949208</a></h4>
                     </div>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                     </div>
                     <div class="ps-4">
                         <h5 class="mb-2">Email to get free quote</h5>
-                        <h4 class="text-primary mb-0">info@techxquad.com</h4>
+                        <h4 class="text-primary mb-0"><a href="mailto:info@techxquad.com">info@techxquad.com</a></h4>
                     </div>
                 </div>
             </div>
