--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -53,8 +53,8 @@
         <div class="row gx-0">
             <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
-                    <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+91 6299949208</small>
-                    <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@techxquad.com</small>
+                    <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i><a href="tel:+91 6299949208" class="text-white">+91 6299949208</a></small>
+                    <small class="text-light"><i class="fa fa-envelope-open me-2"></i><a href="mailto:info@techxquad.com" class="text-white">info@techxquad.com</a></small>
                 </div>
             </div>
             <div class="col-lg-4 text-center text-lg-end">
@@ -87,7 +87,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
-                    <a href="index.html" class="nav-item nav-link active" id="home">Home</a>
+                    <a href="index.html" class="nav-item nav-link " id="home">Home</a>
                     <a href="#!about" class="nav-item nav-link" id="about">About</a>
                     <div class="nav-item dropdown">
                         <a href="#!services" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"
@@ -151,7 +151,7 @@
 
                 <div class="col-lg-12 col-md-12">
                     <div class="row gx-5">
-                        <div class="col-lg-6 col-md-12 pt-5 mb-5">
+                        <div class="col-lg-4 col-md-12 pt-5 mb-5">
                             <div class="section-title section-title-sm position-relative pb-3 mb-4">
                                 <h3 class="text-light mb-0">Get In Touch</h3>
                             </div>
@@ -161,11 +161,11 @@
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-envelope-open text-primary me-2"></i>
-                                <p class="mb-0">info@techxquad.com</p>
+                                <p class="mb-0" ><a href="mailto:info@techxquad.com" class="text-white">info@techxquad.com</a></p>
                             </div>
                             <div class="d-flex mb-2">
                                 <i class="bi bi-telephone text-primary me-2"></i>
-                                <p class="mb-0">+91 6299949208</p>
+                                <p class="mb-0"><a href="tel:6299949208" class="text-white">+91 6299949208</a></p>
                             </div>
                             <div class="d-flex mt-4">
                                 <a class="btn btn-primary btn-square me-2" href="#"><i
@@ -178,7 +178,7 @@
                                         class="fab fa-instagram fw-normal"></i></a>
                             </div>
                         </div>
-                        <div class="col-lg-6 col-md-12 pt-0 pt-lg-5 mb-5">
+                        <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
                             <div class="section-title section-title-sm position-relative pb-3 mb-4">
                                 <h3 class="text-light mb-0">Quick Links</h3>
                             </div>
@@ -196,6 +196,10 @@
                                 <a class="text-light" href="#"><i
                                         class="bi bi-arrow-right text-primary me-2"></i>Contact Us</a>
                             </div>
+                        </div>
+                        <div class="col-lg-4 col-md-12 pt-0 pt-lg-5 mb-5">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3662.084281142787!2d85.35195837486138!3d23.385168102700668!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f4e16b76d7e737%3A0xed11e4dbbaa0b66c!2sshanti%20vihar%2C%20oppossite%20teril%20talab!5e0!3m2!1sen!2sin!4v1690714211136!5m2!1sen!2sin" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        
                         </div>
 
                     </div>
